airport project ver1

--- a/AirportMVC1/Project_Readme.html
+++ b/AirportMVC1/Project_Readme.html
@@ -96,8 +96,7 @@
 <body>
 
     <div id="header">
-        <h1>Your ASP.NET application</h1>
-        <p>Congratulations! You've created a project</p>
+        <h1>Airport learing application</h1>
     </div>
 
     <div id="main">
